@@ -1,5 +1,12 @@
 2007-03-06  Veerapuram Varadhan  <vvaradhan@novell.com>
 
+	** Fixes #384303 - Patch by Srinivasa Ragavan
+	* configure.in:
+	* addressbook/e-book-backend-gal.c: Disable GAL caching if
+	LDAP_CONTROL_PAGEDRESULTS is undefined.
+	
+2007-03-06  Veerapuram Varadhan  <vvaradhan@novell.com>
+
 	* camel/camel-exchange-store.c (exchange_get_folder_info): Mask
 	CAMEL_FOLDER_INFO_FAST with CAMEL_FOLDER_INFO_SUBSCRIBED in order
 	to fetch the correct folder list, which changed after the public
